# tmo_observing

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
tests/: .gitignore  test_angles.py  test_cli.py  test_slice.py
tmo_obs/: autofocus.py  horizons_scheduler.py  observe.py  utils.py
tmo_obs/config/: .gitignore  __init__.py  logging.json  stub.toml.example
tmo_obs/tess_processing/: .gitignore  find_files.py  find_tess.py  metadata.py
tmo_obs/tess_processing/database/: ingest.py  metadata.py  record_db.py  record_models.py  sqlite_db.py
tmo_obs/tools/: .gitgnore  bbox.py  cconvert.py  hourangle.py  hselect.py  imhead.py  imstat_deluxe.py  lst.py  sageslice.py
tmo_obs/utils/: __init__.py  angles.py  celestial_sphere.py  general.py
